# mac-whisper-speedtest

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  test_benchmark.py  test_benchmark2.py
docs/: APPLE_SILICON_OPTIMIZATIONS.md  BENCHMARK_RESULTS.md  CODEBASE_EXPLORATION.md  FLUIDAUDIO_FINAL_STATUS.md  FLUIDAUDIO_ISSUE.md  IMPLEMENTATION_ARCHITECTURE.md  IMPLEMENTATION_DOCUMENTATION_TEMPLATE.md  MODEL_CACHING.md  MODEL_CACHING_ANALYSIS_2025-12-31.md  PLAN_2026-01-18_Git_Worktree_Reorganization.md  SESSION_SUMMARY_2026-01-07_LightningWhisperMLX.md  SESSION_SUMMARY_2026-01-10_WhisperKit_Documentation.md  SESSION_SUMMARY_2026-01-11_MLXWhisper_Documentation.md  SESSION_SUMMARY_2026-01-11_ParakeetMLX_Documentation.md  SESSION_SUMMARY_2026-01-11_WhisperKit_Large_Model.md  SESSION_SUMMARY_2026-01-12_FasterWhisper_Documentation.md  SESSION_SUMMARY_2026-01-12_FluidAudioCoreML_Documentation.md  SESSION_SUMMARY_2026-01-12_InsanelyFastWhisper_Documentation.md  SESSION_SUMMARY_2026-01-12_LightningWhisperMLX_Documentation.md  SESSION_SUMMARY_2026-01-12_WhisperMPS_Documentation.md  SESSION_SUMMARY_2026-01-13_WhisperKit_Documentation_Merge.md  SESSION_SUMMARY_2026-01-14_CLI_Batch_Mode_Planning.md  SESSION_SUMMARY_2026-01-14_Hidden_Dependencies_Documentation.md  SESSION_SUMMARY_2026-01-14_Version_Audit_and_Upgrade_Plans.md  SESSION_SUMMARY_2026-01-18_Git_Worktree_Reorganization.md  SESSION_SUMMARY_2026-01-24_CLI_Batch_Mode_Implementation.md  SESSION_SUMMARY_2026-01-24_Git_Folder_Cleanup.md  SESSION_SUMMARY_2026-01-25_CoreML_Auto_Download.md  SESSION_SUMMARY_2026-01-25_FluidAudio_Upgrade_0.10.0.md  SESSION_SUMMARY_2026-01-25_MLX_Upgrade_0.30.3.md  SESSION_SUMMARY_2026-01-25_Upgrade_Initiative_Milestone.md  SESSION_SUMMARY_2026-01-25_WhisperKit_Upgrade_0.15.0.md  SESSION_SUMMARY_2026-01-26_HuggingFace_Ecosystem_Upgrade.md  SESSION_SUMMARY_2026-01-28_Moonshine_Research.md  SESSION_SUMMARY_2026-03-16_Branch_Audit_and_Project_Status.md  documents-exploration-2026-03-16-insights-directional-signals.md  explainer_mlx-framework.md  (+47 more)
(+1993 files in other folders)
